feat-(auth): Добавлена логика авторизации

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,7 +16,7 @@ body {
 
 @layer base {
   body {
-    @apply text-base font-PixelSans font-normal bg-body text-white m-0 min-h-screen;
+    @apply text-base font-PixelSans font-normal bg-body  text-white m-0 min-h-screen !important;
   }
 
   input {
