--- a/public/font/font.scss
+++ b/public/font/font.scss
@@ -1,23 +1,29 @@
 @font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('./IBM-Plex-Sans/IBMPlexSans-ExtraLight.ttf');
-  font-weight: 200;
+  font-family: "exo2";
+  src: url("./exo2/static/Exo2-Light.ttf");
+  font-weight: 300;
 }
 
 @font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('./IBM-Plex-Sans/IBMPlexSans-Regular.ttf');
+  font-family: "exo2";
+  src: url("./exo2/static/Exo2-Regular.ttf");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('./IBM-Plex-Sans/IBMPlexSans-Medium.ttf');
+  font-family: "exo2";
+  src: url("./exo2/static/Exo2-Medium.ttf");
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'IBM Plex Sans';
-  src: url('./IBM-Plex-Sans/IBMPlexSans-SemiBold.ttf');
+  font-family: "exo2";
+  src: url("./exo2/static/Exo2-SemiBold.ttf");
   font-weight: 600;
+}
+
+@font-face {
+  font-family: "exo2";
+  src: url("./exo2/static/Exo2-Bold.ttf");
+  font-weight: 700;
 }
