--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,7 +19,10 @@ body {
     @apply text-xl font-exo2 font-normal bg-body  text-white m-0 min-h-screen !important;
   }
 
-  input,
+  input {
+    @apply  font-exo2 !important;
+  }
+
   button {
     @apply text-base font-exo2 !important;
   }
@@ -29,6 +32,7 @@ body {
   .container {
     @apply w-3/4 mx-auto;
   }
+
   .card {
     @apply bg-card p-5 rounded-md;
   }
@@ -38,23 +42,24 @@ body {
   .error {
     @apply text-error;
   }
+
   .menu {
     @apply flex items-center gap-1 px-2.5 py-1 rounded-md cursor-pointer transition-colors duration-300 ease-in-out;
   }
+
   .menu:hover {
     @apply bg-menu;
   }
+
   .active {
     @apply bg-menu !important;
   }
+
   .switch {
     @apply bg-menu !important;
   }
+
   .switch:hover {
     @apply bg-opacity-30 !important;
   }
-  .ant-statistic-title {
-    @apply text-white font-exo2 font-semibold text-2xl !important;
-  }
 }
-
