--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,64 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("./reset.scss");
-@import url("../public/font/font.scss");
+@import url('./reset.scss');
+@import url('../public/font/font.scss');
 
 #root {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-  text-rendering: optimizeSpeed;
-  -webkit-font-smoothing: antialiased;
+	text-rendering: optimizeSpeed;
+	-webkit-font-smoothing: antialiased;
 }
 
 @layer base {
-  body {
-    @apply text-xl font-exo2 font-normal bg-body  text-white m-0 min-h-screen !important;
-  }
+	body {
+		@apply text-xl font-exo2 font-normal bg-body  text-white m-0 min-h-screen !important;
+	}
 
-  input {
-    @apply  font-exo2 !important;
-  }
+	input {
+		@apply font-exo2 !important;
+	}
 
-  button {
-    @apply text-base font-exo2 !important;
-  }
+	button {
+		@apply text-base font-exo2 !important;
+	}
 }
 
 @layer components {
-  .container {
-    @apply w-3/4 mx-auto;
-  }
+	.container {
+		@apply w-3/4 mx-auto;
+	}
 
-  .card {
-    @apply bg-card p-5 rounded-md;
-  }
+	.card {
+		@apply bg-card p-5 rounded-md;
+	}
 }
 
 @layer utilities {
-  .error {
-    @apply text-error;
-  }
+	.error {
+		@apply text-error;
+	}
 
-  .menu {
-    @apply flex items-center gap-1 px-2.5 py-1 rounded-md cursor-pointer transition-colors duration-300 ease-in-out;
-  }
+	.menu {
+		@apply flex items-center gap-1 px-2.5 py-1 rounded-md cursor-pointer transition-colors duration-300 ease-in-out;
+	}
 
-  .menu:hover {
-    @apply bg-menu;
-  }
+	.menu:hover {
+		@apply bg-menu;
+	}
 
-  .active {
-    @apply bg-menu !important;
-  }
+	.active {
+		@apply bg-menu !important;
+	}
 
-  .switch {
-    @apply bg-menu !important;
-  }
+	.switch {
+		@apply bg-menu !important;
+	}
 
-  .switch:hover {
-    @apply bg-opacity-30 !important;
-  }
+	.switch:hover {
+		@apply bg-opacity-30 !important;
+	}
 }
