refactor-(finance): Рефакторинг кода

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -62,4 +62,8 @@ body {
 	.switch:hover {
 		@apply bg-opacity-30 !important;
 	}
+
+	.custom-modal {
+		@apply flex items-center justify-center;
+	}
 }
