--- a/styles/index.scss
+++ b/styles/index.scss
@@ -45,15 +45,11 @@ body {
 	}
 
 	.menu {
-		@apply flex items-center gap-1 px-2.5 py-1 rounded-md cursor-pointer transition-colors duration-300 ease-in-out;
+		@apply flex items-center w-full gap-1 p-1 rounded-md cursor-pointer transition-colors duration-300 ease-in-out;
 	}
 
 	.menu:hover {
 		@apply bg-menu;
-	}
-
-	.active {
-		@apply bg-menu !important;
 	}
 
 	.switch {
@@ -62,10 +58,6 @@ body {
 
 	.switch:hover {
 		@apply bg-opacity-30 !important;
-	}
-
-	.custom-modal {
-		@apply flex items-center justify-center;
 	}
 
 	.input-number .ant-input-number-handler-wrap {
