--- a/styles/index.scss
+++ b/styles/index.scss
@@ -37,19 +37,19 @@ body {
 	.card {
 		@apply bg-card p-5 rounded-md;
 	}
-}
-
-@layer utilities {
-	.error {
-		@apply text-error;
-	}
 
 	.menu {
 		@apply flex items-center w-full gap-1 p-1 rounded-md cursor-pointer anim;
 	}
 
 	.menu:hover {
-		@apply bg-menu text-hover;
+		@apply bg-menu;
+	}
+}
+
+@layer utilities {
+	.error {
+		@apply text-error;
 	}
 
 	.switch {
@@ -74,10 +74,6 @@ body {
 
 	.anim {
 		@apply transition-colors duration-300 ease-in-out;
-	}
-
-	.text-hover:hover {
-		@apply text-gray-300;
 	}
 
 	.category {
